# tsrl

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: csv_multiasset_portfolio_template.json  csv_time_trading_template.json  matrix_cross_task_sequence_suite.json  matrix_cross_task_stability_suite.json  matrix_synthetic_research_suite.json  overnight_matrix_gru_search.json  overnight_trading_risk_aware_search.json  overnight_trading_search.json  study_trading_encoder_matrix.json  study_trading_risk_aware.json  synthetic_portfolio.json  synthetic_portfolio_patchtst.json  synthetic_portfolio_patchtst_finetune_template.json  synthetic_regime.json  synthetic_regime_dlinear.json  synthetic_regime_gru.json  synthetic_regime_patchtst.json  synthetic_regime_patchtst_aux.json  synthetic_regime_patchtst_finetune_template.json  synthetic_regime_transformer.json  synthetic_trading.json
data/: demo_embeddings.npy
scripts/: generate_demo_embeddings.py  run_overnight.sh
src/tsrl_lite/: __init__.py  __main__.py  benchmark.py  builders.py  cli.py  config.py  evaluate.py  export.py  matrix.py  optimizer.py  pretrain.py  probe.py  registry.py  state.py  (+3 more)
tests/: test_benchmark.py  test_data_splits.py  test_encoders.py  test_export.py  test_matrix.py  test_optimizer.py  test_portfolio_env.py  test_precomputed_encoder.py  test_pretrain.py  test_probe.py  test_regime_env.py  test_smoke_train.py  test_study.py  test_torch_dlinear.py  test_torch_gru.py  test_torch_patchtst.py  test_torch_transformer.py  test_trading_env.py  test_walk_forward.py
(+27 files in other folders)
